# to-svg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  color_vectorize.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml
scripts/: combine_vector_outline.py
src/color_vectorize/: __init__.py  alpha.py  cli.py  geometry.py  masks.py  quantize.py  svg_builder.py  utils.py
tests/: conftest.py  test_basic.py  test_logging.py
