[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-vectorize"
version = "0.1.0"
description = "Multi-color raster to SVG vectorization with smoothing, holes, overlap, strokes, alpha handling"
authors = [ { name = "Your Name" } ]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["svg", "vectorization", "image", "graphics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "svgwrite>=1.4"
]

[project.scripts]
color-vectorize = "color_vectorize.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
color_vectorize = ["py.typed"]

